adding functionality: admin can add, remove and manage roles